--- a/index.html
+++ b/index.html
@@ -26,6 +26,50 @@
          </div>
         <div id="poke_container" class="poke-container">
         </div>
+        <form>
+
+        </form>
+        <script>
+            // GET retrieve all to-do’s
+            fetch('http://localhost:3000/pokemons')
+            .then(response => response.json())
+            .then(json => console.log(json))
+            // will return all resources
+
+            // POST adds a random id to the object sent
+            fetch('http://localhost:3000/pokemons', {
+            method: 'POST',
+            body: JSON.stringify({
+            userId: 1,
+            completed: false
+            }),
+
+            headers: {
+            "Content-type": "application/json; charset=UTF-8"
+            }
+            })
+            .then(response => response.json())
+            .then(json => console.log(json))
+
+            // PUT to the resource with id = 5 to change the name of task
+            fetch('http://localhost:3000/pokemons/5', {
+            method: 'PUT',
+            body: JSON.stringify({
+            userId: 1,
+            id: 5,
+            completed: false
+            }),
+            })
+            .then(response => response.json())
+            .then(json => console.log(json))
+
+
+            // DELETE task with id = 1
+            fetch('http://localhost:3000/pokemons/1', {
+            method: 'DELETE'
+            })
+            // empty response: {}
+        </script>
     </main>
     <footer>
         <div class="h2"><h2>PokeEnterprise</h2></div>
